syntax = "proto3";
package samples.openapi;

message OpenApi {
    enum FailureModes {
        RECURSION_ERROR = 0;
        SYNTAX_ERROR    = 1;
    }

    string name                      = 1;
    string timestamp                 = 2;
    int32 id                         = 3;
    float rating                     = 4;
    bool complete                    = 5;
    FailureModes failureMode         = 6;
    TopLevelEnum importedEnum        = 9;
}

enum TopLevelEnum {
    VALUE_0 = 0;
    VALUE_1 = 1;
    VALUE_2 = 2;
    VALUE_3 = 3;
}
