syntax = "proto3";
package samples;

message SelfReference {
  string name      = 1;
  repeated SelfReference bar = 2;
}
